# Showrunner

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  antigravity.yaml  event_log.db  event_log.db-shm  event_log.db-wal  knowledge_graph.db  knowledge_graph.db-shm  knowledge_graph.db-wal  outsourcing_prompts.md.resolved  patch_pipeline.js  patch_store.js  pyproject.toml  run_tests.sh  showrunner.yaml  start_server.sh  start_studio.sh  test_cascade_api.sh  test_chroma.py  test_create.py  test_distillation.js  test_distillation.py  test_era_versioning.py  test_event.py  test_failures.md  test_llm.py
characters/: test_character.yaml
dialogue_style/: chandler_noir.yaml  neon_gritty.yaml  shadowy_whisper.yaml
docs/: AGENTIC_CHAT_CUJS.md  DESIGN.md  IDEAL_USER_JOURNEYS.md  IDE_GUIDE.md  LOW_LEVEL_DESIGN.md  MASTER_CUJS.md  PHASE_L_WALKTHROUGH.md  PHASE_PROMPTS.md  PRD.md  QUICKSTART.md  RECOVERY.md  REDESIGN_OUTSOURCING_PROMPTS.md  ROADMAP_PHASE_D.md  ROADMAP_PHASE_E.md  ROADMAP_PHASE_L.md  SCHEMA_BUILDER_UX.md  SESSION_PROMPT_PHASE_J_LLM_WIRING.md  UX_AUDIT_REPORT.md  UX_EFFICIENCY_PROMPTS.md  UX_EFFICIENCY_REVIEW.md  VISION.md
meta/: no_extractable_story_elements_found..yaml
scene/: rainy_market_encounter.yaml
schemas/: character.yaml  faction.yaml  location.yaml  scene.yaml  spell.yaml
scripts/: schema_migration.py
tests/: test_approval_gates.py  test_chat_context_manager.py  test_chat_orchestrator.py  test_chat_plan_mode.py  test_chat_schemas.py  test_chat_session_repo.py  test_chat_tool_registry.py  test_context_assembler.py  test_context_engine.py  test_rag.py  (+20 more)
(+625 files in other folders)
