[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "showrunner"
version = "0.1.0"
description = "CLI tool for creating manga/manhwa/comic panels with agentic AI workflows"
readme = {text = "CLI tool for creating manga/manhwa/comic panels with agentic AI workflows", content-type = "text/plain"}
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Vikas Ahlawat" },
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
    "python-ulid>=2.0.0",
    "litellm>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sse-starlette>=0.11.0",
    "chromadb>=0.4.0",
    "watchdog>=4.0.0",
]

[project.scripts]
showrunner = "showrunner_tool.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/showrunner_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
